[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
walkdir = "2.3"
regex = "1.9"
chrono = "0.4"
colored = "2.0"
tree_magic_mini = "3"

